# chipStar-nvcc

./: CMakeLists.txt  README.md
root/include/: cooperative_groups.h  cuda_runtime.h  cuda_runtime_ext.h
